# unicity-aos

./: .gitignore  CHANGELOG.md  Capsule.toml  Cargo.toml  Distro.toml  MIGRATION.md  README.md  install.sh  rust-toolchain.toml
.cargo/: config.toml
capsules/capsule-agents/: Capsule.toml  Cargo.toml
capsules/capsule-agents/src/: lib.rs
capsules/capsule-context-engine/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-forge/: Capsule.toml  Cargo.toml
capsules/capsule-forge/src/: checks.rs  lib.rs  meta_harness_quickstart.md  quickstart.md  scaffold.rs
capsules/capsule-forge/src/guides/: authority.md  build.md  capabilities.md  capsule.md  foundations.md  ipc.md  manifest.md  meta-harness.md  security.md  skills.md  wit.md  workspace.md
capsules/capsule-forge/src/skills/capsule-forge/: SKILL.md
capsules/capsule-forge/src/skills/meta-harness/: SKILL.md
capsules/capsule-forge/src/skills/meta-harness/agents/: openai.yaml
capsules/capsule-fs/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-fs/src/: grep.rs  lib.rs
capsules/capsule-hook-bridge/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-hook-bridge/src/: lib.rs
capsules/capsule-http/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-http/src/: lib.rs
capsules/capsule-identity/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-identity/src/: lib.rs
capsules/capsule-linux-realm/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-linux-realm/assets/: linux-vcpu.wasm
capsules/capsule-linux-realm/crates/realm-9p/: Cargo.toml
capsules/capsule-linux-realm/crates/realm-9p/src/: lib.rs
capsules/capsule-linux-realm/crates/realm-abi/src/: lib.rs
capsules/capsule-linux-realm/crates/realm-core/src/: lib.rs
capsules/capsule-linux-realm/crates/realm-machine/: Cargo.toml
capsules/capsule-linux-realm/crates/realm-machine/examples/: benchmark_linux.rs  boot_linux.rs  build_prewarm.rs  dump_linux_fdt.rs
capsules/capsule-linux-realm/crates/realm-machine/src/: atomic_ram.rs  checkpoint.rs  fdt.rs  floating.rs  lib.rs
capsules/capsule-linux-realm/crates/realm-runtime/: build.rs
capsules/capsule-linux-realm/crates/realm-runtime/src/: lib.rs  pipeline.rs
capsules/capsule-linux-realm/crates/realm-vcpu-protocol/: Cargo.toml
capsules/capsule-linux-realm/crates/realm-vcpu-protocol/src/: lib.rs
capsules/capsule-linux-realm/crates/realm-vcpu-worker/: Cargo.toml
capsules/capsule-linux-realm/crates/realm-vcpu-worker/.cargo/: config.toml
capsules/capsule-linux-realm/crates/realm-vcpu-worker/src/: lib.rs
capsules/capsule-linux-realm/crates/realm-vfs/src/: lib.rs
capsules/capsule-linux-realm/guests/env/: env.wat
capsules/capsule-linux-realm/guests/mini-shell/: mini-shell.wat
capsules/capsule-linux-realm/linux/: Image  README.md  assemble-userland.sh  build-guest-tools.sh  build-image.sh  build-userland.sh  init.S  initramfs.list  prepare-guest-tools.sh
capsules/capsule-linux-realm/linux/buildroot/: Config.in
capsules/capsule-linux-realm/linux/buildroot/board/aos/: init.c  post-build.sh
capsules/capsule-linux-realm/linux/buildroot/configs/: aos_rv64_defconfig
capsules/capsule-linux-realm/linux/buildroot/package/aos-rust-toolchain/: Config.in  aos-rust-toolchain.hash  aos-rust-toolchain.mk
capsules/capsule-linux-realm/linux/kernel/: net-9p-aos.patch  trans_aos.c
capsules/capsule-linux-realm/scripts/: build-vcpu-worker.sh  package-capsule-assets.sh
capsules/capsule-linux-realm/src/: actor.rs  backend.rs  host.rs  lib.rs  paths.rs  resources.rs
capsules/capsule-mcp/: Capsule.toml  Cargo.toml
capsules/capsule-mcp/src/: host_hooks.rs  lib.rs
capsules/capsule-memory/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-memory/src/: lib.rs
capsules/capsule-openai/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-openai-compat/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-openai/src/: lib.rs  models.rs
capsules/capsule-prompt-builder/: .gitattributes  Capsule.toml  Cargo.toml  README.md
capsules/capsule-prompt-builder/.github/workflows/: release.yml
capsules/capsule-prompt-builder/src/: lib.rs  tests.rs
capsules/capsule-react/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-react/src/: lib.rs
capsules/capsule-registry/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-registry/src/: lib.rs  lib_tests.rs  selection.rs
capsules/capsule-router/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-router/.cargo/: config.toml
capsules/capsule-router/src/: lib.rs
capsules/capsule-session/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-session/src/: lib.rs
capsules/capsule-shell/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-shell/.github/workflows/: ci.yml
capsules/capsule-shell/src/: lib.rs
capsules/capsule-skills/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-skills/src/: lib.rs
capsules/capsule-skills/src/skills/capacity-planning/: SKILL.md
capsules/capsule-system/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-system/src/: lib.rs
capsules/capsule-system/src/skills/capsule-development/: SKILL.md
capsules/capsule-telegram/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-telegram/src/: lib.rs  telegram.rs
capsules/capsule-users/: Capsule.toml  Cargo.toml  README.md
capsules/capsule-users/src/: lib.rs
crates/aos-mcp-broker/: Cargo.toml
crates/aos-mcp-broker/src/: approval.rs  broker.rs  cache.rs  discovery.rs  execute.rs  grant_decision.rs  hook_gate.rs  identity.rs  lib.rs  policy.rs  profile.rs
crates/unicity-aos-bootstrap/: Cargo.toml
crates/unicity-aos-bootstrap/src/: health.rs  lib.rs  main.rs  migration.rs  status.rs
crates/unicity-aos-bootstrap/src/mcp/: interaction.rs  mod.rs
crates/unicity-aos-bootstrap/tests/: cli_boundary.rs
docs/: meta-harness.md  principal-linux-realm.md  release-channels.md  runtime-control.md  runtime-migration.md
release/: community-capsules.txt  runtime-command-surface.toml  runtime-compatibility.toml  runtime-musl-compatibility.toml
scripts/: astrid_musl_release.py  benchmark-linux-realm.py  (+38 more)
(+31 files in other folders)
