[workspace]
members = [
    "crates/unicity-aos-bootstrap",
    "capsules/capsule-linux-realm",
    "capsules/capsule-linux-realm/crates/realm-abi",
    "capsules/capsule-linux-realm/crates/realm-core",
    "capsules/capsule-linux-realm/crates/realm-machine",
    "capsules/capsule-linux-realm/crates/realm-9p",
    "capsules/capsule-linux-realm/crates/realm-runtime",
    "capsules/capsule-linux-realm/crates/realm-vfs",
    "capsules/capsule-agents",
    "capsules/capsule-cli",
    "capsules/capsule-context-engine",
    "capsules/capsule-forge",
    "capsules/capsule-fs",
    "capsules/capsule-hook-bridge",
    "capsules/capsule-http",
    "capsules/capsule-identity",
    "capsules/capsule-memory",
    "capsules/capsule-openai",
    "capsules/capsule-openai-compat",
    "capsules/capsule-prompt-builder",
    "capsules/capsule-react",
    "capsules/capsule-registry",
    "capsules/capsule-router",
    "capsules/capsule-session",
    "capsules/capsule-shell",
    "capsules/capsule-skills",
    "capsules/capsule-system",
    "capsules/capsule-telegram",
    "capsules/capsule-users",
]
resolver = "3"

[workspace.dependencies]
astrid-sdk = { version = "=0.7.1", features = ["derive"] }
astrid-core = "=0.10.1"
astrid-uplink = "=0.10.1"
aos-realm-abi = { path = "capsules/capsule-linux-realm/crates/realm-abi" }
aos-realm-core = { path = "capsules/capsule-linux-realm/crates/realm-core" }
aos-realm-machine = { path = "capsules/capsule-linux-realm/crates/realm-machine" }
aos-realm-9p = { path = "capsules/capsule-linux-realm/crates/realm-9p" }
aos-realm-runtime = { path = "capsules/capsule-linux-realm/crates/realm-runtime" }
aos-realm-vfs = { path = "capsules/capsule-linux-realm/crates/realm-vfs" }
axum = "0.8"
blake3 = "1.8.5"
clap = { version = "4.6", features = ["derive"] }
fs2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["net", "rt", "time"] }
toml = "0.8"
uuid = { version = "1.22", features = ["rng-getrandom", "serde", "v4"] }
# Current stable release. Wasmi 2.0 is still a beta line and is not admitted to
# the reference runtime without a deliberate compatibility review.
wasmi = { version = "=1.1.0", default-features = false, features = [
    "extra-checks",
    "prefer-btree-collections",
] }
# Build-only compiler for the checked-in smoke guest source.
wat = { version = "=1.253.0", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# The nested RV64 interpreter is the Linux Realm's CPU hot path. Optimizing it
# for speed keeps a full kernel boot inside the broker's bounded tool window;
# the rest of the distro retains the size-first release profile above.
[profile.release.package.aos-realm-machine]
opt-level = 3
