[package]
name = "astrid-capsule-context-engine"
version = "0.2.0"
edition = "2024"
description = "Context Engine capsule — pluggable compaction with interceptor hook support"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Local-development override: point at the in-repo sdk-rust workspace.
# This is removed once sdk-rust 0.7.0 ships to crates.io.
# See CAPSULE_MIGRATION_GUIDE.md for context.
