[package]
name = "aos-forge"
version = "0.1.0"
edition = "2024"
description = "Agent-facing construction tooling for building Unicity AOS capsules and harnesses"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# 0.7 resolves to 0.7.1+, which carries the tool_describe publish fix —
# a return-only describe collects 0 tools, so the floor matters.
astrid-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
