[package]
name = "astrid-capsule-fs"
version = "0.2.0"
edition = "2024"
description = "Core filesystem tools for the Astrid microkernel"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
astrid-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Local-path overrides while the per-domain WIT SDK is unpublished
# (sdk-rust feat/per-domain-wit). Will be removed once astrid-sdk 0.7.0
# ships to crates.io. See CAPSULE_MIGRATION_GUIDE.md.
