[package]
name = "astrid-capsule-hook-bridge"
version = "0.2.0"
edition = "2024"
description = "Hook bridge capsule — maps lifecycle events to semantic hooks with merge strategies"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
