[package]
name = "astrid-capsule-http"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "HTTP fetch tool for Astrid agents"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { version = "0.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
