[package]
name = "astrid-capsule-http"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "HTTP fetch tool for Astrid agents"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
