[package]
name = "astrid-capsule-identity"
version = "0.2.0"
edition = "2024"
description = "Context builder capsule for Unicity AOS"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
