[package]
name = "astrid-capsule-memory"
version = "0.2.0"
edition = "2024"
description = "Cross-session memory capsule for Astrid OS"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
