[package]
name = "astrid-capsule-openai-compat"
version = "0.2.0"
edition = "2024"
description = "OpenAI-compatible LLM provider capsule for Astrid OS"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
