[package]
name = "aos-prompt-builder"
version = "0.2.0"
edition = "2024"
description = "Prompt assembly capsule — fires interceptor hooks and merges plugin contributions into the final LLM prompt"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
