[package]
name = "astrid-capsule-react"
version = "0.2.2"
edition = "2024"
description = "ReAct loop capsule: stateless coordinator for LLM reasoning and tool execution"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
