[package]
name = "astrid-capsule-registry"
version = "0.2.0"
edition = "2024"
description = "LLM provider registry capsule for Astrid OS"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { version = "0.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Local-path overrides for per-domain WIT SDK migration. Removed when
# astrid-sdk 0.7.0 ships to crates.io. See CAPSULE_MIGRATION_GUIDE.md.
