[package]
name = "aos-registry"
version = "0.2.0"
edition = "2024"
description = "LLM provider registry capsule for Unicity AOS"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Local-path overrides for per-domain WIT SDK migration. Removed when
# astrid-sdk 0.7.0 ships to crates.io. See CAPSULE_MIGRATION_GUIDE.md.
