[package]
name = "astrid-capsule-router"
version = "0.2.0"
edition = "2024"
description = "Tool execution routing middleware for Unicity AOS"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Local-development override during the per-domain WIT migration. The
# `sdk-rust` workspace is not yet published to crates.io; resolve the
# `astrid-sdk*` family from the sibling polyrepo checkout. Remove this
# block once sdk-rust 0.7.0 lands on crates.io.
