[package]
name = "astrid-capsule-session"
version = "0.2.0"
edition = "2024"
description = "Persistent conversation session store for Astrid OS"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Local-path overrides for the post-PR-#752 SDK that targets the
# per-domain WIT host ABI. These are removed once sdk-rust 0.7.0
# ships to crates.io.
