[package]
name = "astrid-capsule-shell"
version = "0.2.0"
edition = "2024"
description = "Core shell execution tools for the Astrid microkernel"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { version = "0.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
