[package]
name = "astrid-capsule-shell"
version = "0.2.0"
edition = "2024"
description = "Core shell execution tools for the Astrid microkernel"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
