[package]
name = "aos-system"
version = "0.2.0"
edition = "2024"
description = "System management tools for Unicity AOS"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
