[package]
name = "aos-telegram"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Telegram Bot uplink capsule for Unicity AOS"

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { version = "0.5.3", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
extism-pdk = "1.4.1"
regex = "1"
