[package]
name = "astrid-capsule-users"
version = "0.1.0"
edition = "2024"
description = "Within-principal user identity store for Unicity AOS"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
