[package]
name = "unicity-aos-bootstrap"
version = "2026.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Product-owned runtime layout and launcher for Unicity AOS."

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
toml.workspace = true

[[bin]]
name = "unicity"
path = "src/main.rs"
