[package]
name = "unicity-aos-bootstrap"
version = "2026.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Product-owned runtime layout and launcher for Unicity AOS."

[dependencies]
astrid-core.workspace = true
astrid-uplink.workspace = true
axum.workspace = true
blake3.workspace = true
clap.workspace = true
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "aos"
path = "src/main.rs"
