[package]
name = "aos-realm-machine"
version = "0.1.0"
edition = "2024"
authors = [
    "Joshua J. Bouw <dev@joshuajbouw.com>",
    "Unicity Labs <info@unicity-labs.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/unicity-aos/aos-ce"
description = "Bounded RV64 virtual machine for the AOS Realm Linux backend"
publish = false

[dependencies]
blake3 = { workspace = true }

[lib]
path = "src/lib.rs"
