[package]
name = "aos-realm-vcpu-protocol"
version = "0.1.0"
edition = "2024"
authors = [
    "Joshua J. Bouw <dev@joshuajbouw.com>",
    "Unicity Labs <info@unicity-labs.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/unicity-aos/aos-ce"
description = "Bounded shared-memory protocol between the AOS Linux Realm and its vCPU worker"
publish = false

[lib]
path = "src/lib.rs"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
